# literature-scan

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
config/: development.yaml
scripts/: setup_azure_resources.py
src/common/: azure_clients.py  config.py  exceptions.py  logging_config.py
src/document_ingestion/: blob_uploader.py  pdf_validator.py
tests/: conftest.py
tests/integration/: test_azure_connections.py
tests/unit/test_common/: test_azure_clients.py  test_config.py  test_logging_config.py
